@@ -1,3 +1,8 @@
+2005-11-04 Paul Jakma <paul.jakma@sun.com>
+
+	* ospf_{dump,spf,vty}.c: Oops, use the internal tv_sub
+	  function rather than unportable timersub.
+
 2005-11-03 Paul Jakma <paul.jakma@sun.com>
 
 	* ospf_apiserver.c: (apiserver_sync_callback) stray semi-colon
@@ -6,7 +11,7 @@
 	* ospf_te.h: Add braces, quell warning.
 	* ospf_packet.c: Change level of some warnings to
 	  informational.
-	  
+
 2005-10-29 Paul Jakma <paul.jakma@sun.com>
 
 	* (general) RFC3137 stub-router support
